# RpgMaster

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  REFACTO_TODO.md  TODO.md  ameliorationGM.md  avancement.md  direction3-combat.jsx  direction3-dialogs.jsx  direction3-full.jsx  docker-compose.yml  package-lock.json
backend/: CLAUDE.md  alembic.ini  llm_runtime.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_save_slots.py  b2c3d4e5f6a7_add_campaigns.py  c3d4e5f6a7b8_add_campaign_dossiers.py  d4e5f6a7b8c9_add_character_hit_dice.py  e5f6a7b8c9d0_add_character_xp_currency.py  e62af9c53a42_initial_schema.py  f6a7b8c9d0e1_add_campaign_starting_level.py
backend/app/: config.py  main.py  security.py  security_url.py
backend/app/agents/: base_agent.py  campaign_forge_agent.py  combat_gm_agent.py  context_manager.py  gm_agent.py  json_recovery.py  player_agent.py  prompt_safety.py  schemas.py
backend/app/api/: connection_manager.py  rate_limit.py  routes_admin.py  routes_campaign.py  routes_character.py  routes_encounters.py  routes_game.py  routes_pregen.py  routes_session.py  routes_srd.py  ws_game.py  ws_payloads.py  ws_schemas.py
backend/app/db/: database.py
backend/app/engine/: ability_checks.py  aoe.py  character_creation.py  combat.py  conditions.py  currency.py  dice.py  encounter_builder.py  equipment.py  inventory.py  level_up.py  loot.py  pathfinding.py  (+4 more)
backend/scripts/: enrich_spells_mechanics.py  import_monsters_from_srd.py  import_spells_from_srd.py
backend/tests/: conftest.py  test_config.py
(+272 files in other folders)
