[project]
name = "rpgmaster-backend"
version = "0.1.0"
description = "AI-powered D&D 5.2 Game Master - Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "ollama>=0.4.0",
    "openai>=1.30.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# UP045: SQLAlchemy 2.0 evalue les annotations ORM via eval() au runtime.
# Sur Python 3.9, X | None n'est pas supporté dans ce contexte — Optional[X] est requis.
ignore = ["UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
